--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 
+#Firebase
+REACT_APP_FIREBASE_API_KEY=AIzaSyAmnLidPCNYeJ93OGxiulWP-51Us0ffzRI
+REACT_APP_FIREBASE_AUTH_DOMAIN=netflix-reactjs-c2d61.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=netflix-reactjs-c2d61
+REACT_APP_FIREBASE_STORAGE_BUCKET=netflix-reactjs-c2d61.appspot.com
+REACT_APP_MESSAGING_SENDER=400672911323
+REACT_APP_APP_ID=1:400672911323:web:8375a8aded2d41e1e801fe
 #IMDB API
-REACT_APP_IMDB_API_KEY="d0e96ef5542c35e121fd7de255617b1b"
+REACT_APP_IMDB_API_KEY=d0e96ef5542c35e121fd7de255617b1b
